# shorts_analytics_dashboard

./: .env  .gitignore  ana.py  ana2.py  ana3.py  ana4.py  ana5.py  audio.py  claude.py  config.py  enhanced_automation.py  gemini.py  gemini2.py  insta.py  main.py  main2.py  man.py  manual.py  pyproject.toml  setup_ana.py  youtube_extractor.py
Shorts/: .gitignore  config2.py  config3.py  main.py  main2.py  mih_auto.py  mih_automation.py  new_main.py  pyproject.toml  setup.py  setup_w.py  test_setup.py
Shorts/logs/: processed_videos.csv  published_clips.csv
modular/: audio_engine.py  config.py  visual_engine.py
